# AI-practical-task-1

./: .gitignore  README.md  main.py  pyproject.toml
src/bfs_dfs_algorithms/: __main__.py
src/bfs_dfs_algorithms/graphs/: directed_graph_50-10  directed_graph_60-5  directed_graph_70-40  undirected_graph_50-10  undirected_graph_60-60  undirected_graph_70-40
src/bfs_dfs_algorithms/operations/: graph.py
